Fix  voucher page layout bug & delete ms radio option (#234)
* fix input label layout bug

* fix radio layout bug with google translate

* fix second form layout bug

* delete ms radio option

* add labelTextWrapper class

* change div to span

--- a/src/pages/VoucherPage/Step1Form/Step1Form.module.scss
+++ b/src/pages/VoucherPage/Step1Form/Step1Form.module.scss
@@ -248,8 +248,13 @@
   padding-bottom: 8px;
   border-radius: 0;
 
+  
+  :nth-child(1) {
+    white-space: normal;
+  }
+
   &:nth-child(2) {
-    max-width: 400px;
+    max-width: 425px;
 
     @include mobile-laptop {
       max-width: 100%;
