--- a/src/pages/VoucherPage/Step2Form/Step2Form.module.scss
+++ b/src/pages/VoucherPage/Step2Form/Step2Form.module.scss
@@ -6,9 +6,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: -350px auto 80px;
+  margin: -130px auto 80px;
   box-shadow: 0 4px 12px rgba(27, 36, 45, 0.15);
   background: $color-laros-light-grey;
+
+  @include tablet-laptop {
+    margin: 40px 30px 40px 30px;
+    min-height: 0;
+  }
+
+  @include mobile {
+    min-height: 0;
+    margin: 0 0 20px 0;
+  }
 }
 
 .wrapper {
